--- a/src/app/screens/personajes-screen/personajes-screen.component.html
+++ b/src/app/screens/personajes-screen/personajes-screen.component.html
@@ -103,7 +103,8 @@
             <span class="spacer"></span>
 
             <button mat-stroked-button color="primary" (click)="editar(p)">Editar</button>
-            <button mat-stroked-button color="warn" (click)="eliminar(p.id!)">Eliminar</button>
+            <button mat-stroked-button color="warn" (click)="eliminar(p.id!, p.nombre)">Eliminar</button>
+
           </div>
         </div>
       </article>
