--- a/src/app/partials/sidenav/sidenav.component.html
+++ b/src/app/partials/sidenav/sidenav.component.html
@@ -22,6 +22,13 @@
     </li>
 
     <li>
+      <a [class.active]="currentPage === 'characters'" (click)="showPage('personajes-api')">
+        <i class="fas fa-users"></i>
+        Personajes API
+      </a>
+    </li>
+
+    <li>
       <a [class.active]="currentPage === 'transformations'" (click)="showPage('transformaciones')">
         <i class="fas fa-bolt"></i>
         Transformaciones
