--- a/src/app/partials/sidenav/sidenav.component.html
+++ b/src/app/partials/sidenav/sidenav.component.html
@@ -50,7 +50,7 @@
     </li>
 
     <li>
-      <a [class.active]="currentPage === 'statistics'" (click)="showPage('statistics')">
+      <a [class.active]="currentPage === 'statistics'" (click)="showPage('estadisticas')">
         <i class="fas fa-chart-bar"></i>
         Estadísticas
       </a>
