--- a/src/app/partials/navbar/navbar.component.html
+++ b/src/app/partials/navbar/navbar.component.html
@@ -20,6 +20,7 @@
       <li><a (click)="showPage('sagas')">Sagas</a></li>
       <li><a (click)="showPage('estadisticas')">Estadísticas</a></li>
       <li><a (click)="showPage('personajes-api')">Personajes API</a></li>
+      <li><a (click)="showPage('estadisticas-api')">Estadísticas API</a></li>  <!-- nuevo enlace -->
     </ul>
 
     
