--- a/src/app/screens/home-screen/home-screen.component.scss
+++ b/src/app/screens/home-screen/home-screen.component.scss
@@ -118,3 +118,29 @@ section.home-screen {
     margin: 0 auto 32px;
   }
 }
+/* Contenedor con imagen de fondo para la sección central */
+.banner-container {
+  margin-top: 1rem;
+  padding: 1.5rem;
+  border-radius: 16px;
+
+  /* Cambia esta ruta al archivo de imagen que desees usar */
+  background-image: url('/assets/img/fondo_casa.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  
+
+  .card {
+    background-color: rgba(238, 231, 231, 0.5);
+    border-radius: 12px;
+    padding: 1rem;
+  }
+
+  .card-title {
+    margin-top: 0;
+    font-size: 1.4rem;
+    font-weight: 700;
+  }
+}
