Sección de episodios
Se programa toda la vista de la sección de episodios.

--- a/src/app/partials/sidenav/sidenav.component.html
+++ b/src/app/partials/sidenav/sidenav.component.html
@@ -43,7 +43,7 @@
     </li>
 
     <li>
-      <a [class.active]="currentPage === 'episodes'" (click)="showPage('episodes')">
+      <a [class.active]="currentPage === 'episodes'" (click)="showPage('episodios')">
         <i class="fas fa-tv"></i>
         Episodios
       </a>
