--- a/src/app/partials/navbar/navbar.component.html
+++ b/src/app/partials/navbar/navbar.component.html
@@ -18,11 +18,12 @@
       <li><a (click)="showPage('personajes')">Personajes</a></li>
       <li><a (click)="showPage('transformaciones')">Transformaciones</a></li>
       <li><a (click)="showPage('sagas')">Sagas</a></li>
+      <li><a (click)="showPage('episodios')">Episodios</a></li>
       <li><a (click)="showPage('estadisticas')">Estadísticas</a></li>
       <li><a (click)="showPage('personajes-api')">Personajes API</a></li>
       <li><a (click)="showPage('estadisticas-api')">Estadísticas API</a></li>  <!-- nuevo enlace -->
     </ul>
 
-    
+
   </nav>
 </header>
